--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,4 @@
-
+<form method="post" action="/checkout">
+    <p>Enter item to purchase: <input type="text" name="item"></p>
+    <input type="submit" value="submit">
+</form>
